--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@vercel/blob": "^0.27.3",
+    "@vercel/kv": "^3.0.0",
     "axios": "^1.5.0",
     "next": "^14.0.0",
     "openai": "^4.90.0",
@@ -19,6 +21,7 @@
     "zustand": "^4.4.1"
   },
   "devDependencies": {
+    "@netlify/functions": "^3.0.4",
     "@types/node": "^20.6.3",
     "@types/react": "^18.2.22",
     "@types/react-dom": "^18.2.7",
