--- a/.env.production
+++ b/.env.production
@@ -1,13 +1,10 @@
 # OpenAI API key for GPT-4o image analysis
-OPENAI_API_KEY=your_openai_api_key_here
-
-# Serper API key for web search
-SERPER_API_KEY=your_serper_api_key_here
+OPENAI_API_KEY=sk-placeholder-openai-key
 
 # Vercel KV config (will be automatically set by Vercel)
-KV_URL=your_kv_url_here
-KV_REST_API_URL=your_kv_rest_api_url_here
-KV_REST_API_TOKEN=your_kv_rest_api_token_here
+KV_URL=kv-placeholder-url
+KV_REST_API_URL=kv-placeholder-api-url
+KV_REST_API_TOKEN=kv-placeholder-token
 
-# Netlify Background Function URL
-NETLIFY_FUNCTION_URL=https://ilovewine.netlify.app/.netlify/functions/process-wine-analysis 
+# Function timeout increase
+VERCEL_FUNCTION_TIMEOUT=60000 
