--- a/vercel.json
+++ b/vercel.json
@@ -13,8 +13,9 @@
   "git": {
     "deploymentEnabled": {
       "vercel-production": true,
-      "preview/openai-only": true,
-      "main": false
+      "preview/openai-only": false,
+      "main": false,
+      "feature/*": false
     }
   }
 } 
